# pokemon-mcp

./: .gitignore  legal_ai_architecture.md  main.py  pokeapi_v2_docs.md  pyproject.toml  server.py  test_tools.py
data/: __init__.py  pokemon_roles.json  team_archetypes.json  type_effectiveness.json
data/cache/: barraskewda.json  charizard.json  excadrill.json  ferrothorn.json  garchomp.json  pelipper.json  swampert.json  type_data.json  tyranitar.json  zapdos.json
modules/: __init__.py  battle_analyzer.py  role_classifier.py  search_engine.py  team_archetypes.py  team_builder.py
utils/: __init__.py  type_calculator.py
